# axum-seaorm

./: Cargo.toml
api/: Cargo.toml
api/src/: dto.rs  errors.rs  extractor.rs  lib.rs
api/src/database/mutation/: auth.rs  mod.rs
api/src/handler/: auth.rs  brand.rs  cart.rs  category.rs  mod.rs  product.rs
api/src/middlewares/: auth_middleware.rs
api/src/routes/: auth.rs  brand.rs  cart.rs  category.rs  mod.rs  product.rs
api/src/services/: auth_service.rs  brand_service.rs  cart_service.rs  category_service.rs  mod.rs  product_service.rs
api/src/utils/: encryption.rs  jwt.rs
entity/: Cargo.toml
entity/src/: brand.rs  cart.rs  category.rs  lib.rs  prelude.rs  product.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230103_030859_create_table_categories.rs  m20230103_133654_create_table_brand.rs  m20230105_095555_create_product_table.rs  m20230111_035339_create_cart_table.rs
