[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
tokio = { version = "1.23.0", features = ["full"] }
tower-http = { version = "0.3.5", features = ["cors"] }
axum = { version = "0.6.1", features = ["headers"] }
dotenvy = "0.15.6"
serde = "1.0.149"
serde_json = "1.0.89"
bcrypt = "0.13.0"
jsonwebtoken = "8.2.0"
thiserror = "1.0.38"
validator = { version = "0.16.0", features = ["derive"] }
chrono = "0.4.23"
lazy_static = "1.4.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
entity = { path = "../entity" }
